--- a/htmlpage/client.html
+++ b/htmlpage/client.html
@@ -41,7 +41,7 @@
                         <li class="nav_right_li"><a href="../htmlpage/about.html">ABOUT US</a></li>
                         <li class="nav_right_li"><a href="../htmlpage/product.html">PRODUCTS</a></li>
                         <li class="nav_right_li"><a href="../htmlpage/client.html">CLIENT</a></li>
-                        <li class="nav_right_li"><a href="#">CONTACT US</a></li>
+                        <li class="nav_right_li"><a href="../htmlpage/contact.html">CONTACT US</a></li>
                         <li class="nav_right_li brochure"><a href="#">BROCHURE</a></li>
                     </ul>
                 </div>
@@ -65,7 +65,7 @@
                 <li class="menu_mobile_li"><a href="../htmlpage/about.html">ABOUT US</a></li>
                 <li class="menu_mobile_li"><a href="../htmlpage/product.html">PRODUCTS</a></li>
                 <li class="menu_mobile_li"><a href="../htmlpage/client.html">CLIENT</a></li>
-                <li class="menu_mobile_li"><a href="#">CONTACT US</a></li>
+                <li class="menu_mobile_li"><a href="../htmlpage/contact.html">CONTACT US</a></li>
                 <li class="menu_mobile_li"><a class="brochure2" href="#">BROCHURE</a></li>
             </ul>
         </div>
