--- a/htmlpage/contact.html
+++ b/htmlpage/contact.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnowCare Refrigretion - About</title>
+    <title>SnowCare Refrigeration - Contact</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../style2.css">
-    <link rel="stylesheet" href="../about.css">
+    <link rel="stylesheet" href="../contact.css">
+    <link rel="stylesheet" href="../product.css">
     <script src="../script.js"></script>
 </head>
 <body>
@@ -20,7 +22,7 @@
             <div class="nav_left">
                 <ul>
                     <li class="nav_left_li">
-                        <a href="../index.html"><img src="../image/finallogo.jfif" alt=""></a>
+                        <a href="../index.html"><img src="../image//finallogo.jfif" alt=""></a>
                     </li>
                     <li class="nav_left_li">
                         <div class="company_name">
@@ -71,37 +73,71 @@
     <main class="main">
         <section class="section1">
             <div class="section1_container">
-                <div class="about_intro">
+                <div class="product_intro">
                     <img src="../image/bg4.jpg" alt="" srcset="">
                     <div class="image_black">
                         <h1>
-                            About Us
+                            Contact
                         </h1>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section2">
-            <div class="section2_container">
-                <div class="section2_img">
-                    <img src="../image/bg111.jpg" alt="" srcset="">
+        <section class="contact_section2">
+            <div class="s2_first">
+                <div class="s2_first_one">
+                    <h1>Contact</h1>
+                    <h2>If You Have Any Question <br>
+                        Drop A Message</h2>
                 </div>
-                <div class="section2_content">
-                    <div class="about_head">
-                        <span>About</span>
-                        <h2>SnowCare Refrigretion</h2>
+            </div>
+            <div class="s2_second">
+                <div class="s2_container">
+                    <div class="s2_second_1">
+                        <span class="material-symbols-outlined contact_icon">
+                            location_on
+                            </span>
+                        <span class="contact_content">Pirgacha, Barasat, Kolkata <br>
+                            (WB) 743 294</span>
                     </div>
-                    <div class="about_content">
-                        <p>We are one of the leading brand in India offering best in class refrigeration units for storage and processing of food Bradacis, we are also specialized in controlled environment solutions to provide excellent working conditions. You can trust Snowfall as an end to end solution for refrigeration and air conditioning.</p>
-                        <p class="para2"><strong>What we offer to our precious clients</strong></p>
-                        <p class="para3">We are stockiest of leading brands-availability of all kind of Seatin class
-                            Refrigeration systems without delay <br>
-                            We are stockiest of spare parts - 100% service bellup without delay <br>
-                            Dealer of leading brands-bassle free warranty replacements and services on time</p>
-                            <p class="para4">Inhouse service centre for refrigeration compressors <br>
-                                Inhouse technicians-easy service and repair</p>
+                    <div class="s2_second_1">
+                        <span class="material-symbols-outlined contact_icon">
+                            call
+                            </span>
+                        <span class="contact_content">+91 6291711674 <br>
+                            +91 9330634629</span>
+                    </div>
+                    <div class="s2_second_1">
+                        <span class="material-symbols-outlined contact_icon">
+                            alternate_email
+                            </span>
+                        <span class="contact_content c3">snowfallrefrigeration4@gmail.com <br>
+                            info@snowfall-refrigeration.com</span>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="section3_contact">
+            <div class="section3_container">
+                <div class="left_s3">
+                    <form action="#">
+                        <div class="first_form">
+                            <input class="first_in" type="text" name="name" id="name" placeholder="Name">
+                            <input type="email" name="email" id="email" placeholder="Email">
+                        </div>
+                        <div class="second_form">
+                            <input type="text" name="subject" id="subject" placeholder="Subject">
+                        </div>
+                        <div class="last_form">
+                            <textarea name="textarea" id="textarea" rows="5" placeholder="Your Message..."></textarea>
+                        </div>
+                        <div class="submit_btn">
+                            <button type="submit">Submit</button>
+                            <button type="reset">Reset</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="right_s3"></div>
             </div>
         </section>
     </main>
