--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li class="nav_left_li">
                         <div class="company_name">
                             <a href="./index.html">
-                                <span class="first_name">SNOWCARE REFRIGRETION</span>
+                                <span class="first_name">SNOWCARE REFRIGERATION</span>
                                 <p class="second_name">AN ISO 9001 : 2015 CERTIFIED COMPANY</p>
                             </a>
                         </div>
@@ -40,7 +40,7 @@
                         <li class="nav_right_li"><a href="./htmlpage/about.html">ABOUT US</a></li>
                         <li class="nav_right_li"><a href="./htmlpage/product.html">PRODUCTS</a></li>
                         <li class="nav_right_li"><a href="./htmlpage/client.html">CLIENT</a></li>
-                        <li class="nav_right_li"><a href="#">CONTACT US</a></li>
+                        <li class="nav_right_li"><a href="./htmlpage/contact.html">CONTACT US</a></li>
                         <li class="nav_right_li brochure"><a href="#">BROCHURE</a></li>
                     </ul>
                 </div>
@@ -64,7 +64,7 @@
                 <li class="menu_mobile_li"><a href="./htmlpage/about.html">ABOUT US</a></li>
                 <li class="menu_mobile_li"><a href="./htmlpage/product.html">PRODUCTS</a></li>
                 <li class="menu_mobile_li"><a href="./htmlpage/client.html">CLIENT</a></li>
-                <li class="menu_mobile_li"><a href="#">CONTACT US</a></li>
+                <li class="menu_mobile_li"><a href="./htmlpage/contact.html">CONTACT US</a></li>
                 <li class="menu_mobile_li"><a class="brochure2" href="#">BROCHURE</a></li>
             </ul>
         </div>
